# cloud-resume-challenge

./: .$cloud-challenge-diagram.drawio.bkp  .$cloud-challenge-diagram.png.bkp  .$cloud-challenge-diagram.png.dtmp  .$cloud-challenge-diagran.drawio.bkp  cloud-challenge-diagram.drawio  make.txt  template copy.yaml  template.yaml  y
.aws-sam/: build.toml
.github/workflows/: python-package.yml  requirements.txt  tests.yml
get_function/: README.md  app.py  pyproject.toml  setup.py  test_lambdafunc.py  testlambda.py
get_function/src/cloud_resume/: app.py
get_function/tests/: test_lambdafunc.py
resume-site/: index.html  srt-resume.html
resume-site/styles/: cvstyle.css  resume.css
